Fixed 2 more minor batch send layout issues

--- a/frontend/src/css/app.sass
+++ b/frontend/src/css/app.sass
@@ -113,7 +113,7 @@ p, div
   color: $warning
   line-height: normal
   margin: 0px 10px
-  width: 30%
+  width: 29%
 
 .batch-send-label
   width: 20px
